indycast.net/assets/css/main.css
/* ... */
#footer:before {
  background: rgba(224, 224, 224, 0.75);
  content: '';
  height: calc(460px + 6em);
  left: 50%;
  position: absolute;
  top: 0;
  width: 1px;
  z-index: 0;
}
#footer strong, #footer b, 
#footer a, #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
  color: #fff;
}
#footer header p {
  color: rgba(255, 255, 255, 0.5);
}
#footer input[type="submit"],
#footer .button {
  background: #ffffff;
  box-shadow: inset 0 0 0 1px #ffffff;
  color: #4eb980;
}
#footer input[type="text"]:focus,
#footer select:focus {
  border-color: #ffffff;
}
#footer .formerize-placeholder {
  color: rgba(255, 255, 255, 0.3) !important;
}
#footer .copyright {
  color: rgba(255, 255, 255, 0.5);
  font-size: 0.8em;
  line-height: 1em;
  margin: 3em 0 0 0;
}
#footer .copyright li {
  border-left: dotted 1px;
  display: inline-block;
  margin-left: 1em;
  padding-left: 1em;
}
#footer .copyright li:first-child {
  padding: 0;
  margin: 0;
  border: 0;
}
#footer .copyright li a, #footer .copyright li span {
  color: inherit;
}
#main {
  padding: 6em 0 5em 0;
  position: relative;
  z-index: 1;
}
#main header.major,
#main footer.major {
  background: #ffffff;
}
@media screen and (max-width: 1680px) {
  body, input, select {
    font-size: 14pt;
  }

  h2 { font-size: 1.5em; }
  h3 { font-size: 1.25em; }

  header.major p {
    font-size: 1.25em;
  }

  #header { padding: 4em 0 8em 0; }
  #header h1 { font-size: 2.25em; }

  #header p {
    font-size: 1.25em;
    line-height: 1.65em;
  }
}

@media screen and (max-width: 1280px) {
  body, input, select {
    font-size: 13pt;
  }

  h2 { font-size: 1.35em; }
  h3 { font-size: 1.15em; }

  header.major {
    margin-bottom: 4em;
    padding: 3em 0;
  }

  header.major p { font-size: 1.15em; }

  footer.major {
    margin-top: 4em;
    padding: 3em 0;
  }

  .box {
    padding: 2.5em;
    margin-bottom: 4em;
  }

  .feature { height: 18em; }
  .feature .content { padding: 0 2.5em; }

  #header {
    background-attachment: scroll,							scroll,							scroll;
    background-image: url("images/top-1600.svg"), url('../images/overlay.png'), url("images/overlay.png"), url("../../images/header.jpg");
    background-size: 1600px 230px,	auto,		cover;
    padding: 6em 0 12em 0;
  }

  #header:before {
    height: calc(100% - 25px);
  }

  #header:after { height: 25px; }
  #header h1 { font-size: 2em; }
  #header p { font-size: 1.15em; }

  #footer {
    background-image: url("images/bottom-1600.svg");
    background-size: 1600px 230px;
    margin-top: -80px;
    padding: calc(230px + 4em) 0 6em 0;
  }

  #footer:before {
    height: calc(230px + 4em);
  }

  #main { padding: 4em 0 3em 0; }
}

@media screen and (max-width: 980px) {
  .page-content, input, select {
    font-size: 12pt;
  }
}

@media screen and (max-width: 840px) {
  header.major {
    padding-left: 2em;
    padding-right: 2em;
  }

  footer.major {
    padding-left: 2em;
    padding-right: 2em;
  }
}

@media screen and (max-width: 736px) {
  h2 { font-size: 1em; }
  h3 { font-size: 1em; }

  header p { font-size: 0.8em; }
  header.major { margin-bottom: 2em; }
  header.major br { display: none; }
  header.major p { font-size: 0.8em; }

  footer.major { margin-top: 2em; }
  footer.major br { display: none; }
  .box {
    padding: 2em;
    margin-bottom: 2em;
  }
  .feature {
    background: #ffffff;
    display: block;
    height: auto;
    margin-bottom: 2em;
  }
  .feature:last-child { margin-bottom: 0; }
  .feature:before, .feature:after {
    display: none;
  }
  .feature .image {
    float: none;
    height: 15em;
    width: 100%;
  }
  .feature .content {
    border: solid 1px rgba(224, 224, 224, 0.75);
    padding: 2em !important;
    text-align: center;
    width: 100%;
  }
  #header {
    background-image: url("images/top-1200.svg"), url('../images/overlay.png'), url("images/overlay.png"), url("../../images/header.jpg");
    background-size: 1280px 184px,						auto,							cover;
    padding: 3em 0 7em 0;
  }
  #header:before { height: calc(100% - 20px); }
  #header:after { height: 20px; }
  #header h1 { font-size: 1.25em; }
  #header p { font-size: 1em; }
  #footer {
    background-image: url("images/bottom-1280.svg");
    background-size: 1280px 184px;
    margin-top: -75px;
    padding: calc(184px + 2em) 0 2em 0;
  }
  #footer:before {
    height: calc(184px + 2em);
  }
  #footer form {
    padding-bottom: 0;
  }
  #main {
    padding: 2em 0 2em 0;
  }
  #rss-img { font-size: 30px; width: 33px }
  #rss-header { margin-left: 38px; }
  .big-button h3 { font-size: 1.1em }
  #rss-header { 
    margin-top: 4px;
  }
}

@media screen and (max-width: 480px) {
  header.major {
    padding-left: 1em;
    padding-right: 1em;
  }
  footer.major {
    padding-left: 1em;
    padding-right: 1em;
  }
  ul.icons li {
    padding: 0.2em;
  }
  input[type="submit"],
  .button {
    display: block;
    width: 100%;
  }
  .box { padding: 2em 1em; }
  .feature { margin-bottom: 1em; }
  .feature .content {
    padding: 2em 1em !important;
  }
  #main {
    padding-left: 1em;
    padding-right: 1em;
  }
  #footer {
    margin-top: 0px;
    padding-left: 1em;
    padding-right: 1em;
  }
  #footer .copyright li {
    border: 0;
    display: block;
    margin: 0;
    padding: 0.75em 0 0 0;
  }
  #header {
    padding-left: 2em;
    padding-right: 2em;
  }
  #header br { display: none; }
  .big-button { max-width: 100%; }
  .big-button,
  #podcast-link { 
    overflow: hidden;
  }
}
form#donate {
  text-align:center;
  margin-top: 0;
}
.big-button {
  text-transform: none;
  white-space: normal;
}
.big-button h3 { font-size: 1.3em; white-space: nowrap }
.big-button.disabled, .disabled .big-button { 
  color: grey;
  border-color: silver;
  cursor: default;
  background: #666466;
  opacity: 0.7;
}
.disabled .big-button:hover, .big-button.disabled:hover {
  background: #666466;
  box-shadow: 0 0;
}
#description a {
  color: #4EB880;
}
/* ... */

